location spacing issues

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -245,6 +245,10 @@ header {
   p {
     margin-block-end: 0; /* reset to the gap */
   }
+
+  ul {
+    padding-inline-start: 0;
+  }
 }
 
 .location.false:not(:last-child) {
